--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -32,6 +32,8 @@ dependencies:
     sdk: flutter
   animated_bottom_navigation_bar: ^1.3.3
   material_design_icons_flutter: ^7.0.7296
+  flutter_expandable_fab: ^2.2.0
+ 
     
 
 
