--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -33,17 +33,21 @@ dependencies:
   animated_bottom_navigation_bar: ^1.3.3
   material_design_icons_flutter: ^7.0.7296
   flutter_expandable_fab: ^2.2.0
+  flutter_mobx: 
+  mobx: 
+  injectable:
+  get_it:
+  mobx_codegen:
  
-    
-
-
+  
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.6
+  
 
 dev_dependencies:
-  flutter_test:
-    sdk: flutter
+  injectable_generator:
+  build_runner:
 
   # The "flutter_lints" package below contains a set of recommended lints to
   # encourage good coding practices. The lint set provided by the package is
