--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -38,6 +38,9 @@ dependencies:
   injectable:
   get_it:
   mobx_codegen:
+  mask_text_input_formatter: ^2.9.0
+  intl: ^0.19.0
+  brasil_fields: ^1.15.0
  
   
   # The following adds the Cupertino Icons font to your application.
