--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -51,10 +51,9 @@ dependencies:
   shimmer:
   fl_chart:
   shared_preferences: ^2.3.2
+  flutter_launcher_icons: ^0.13.1
 
 
- 
-  
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: 
@@ -87,6 +86,7 @@ flutter:
   # To add assets to your application, add an assets section, like this:
   assets:
     - assets/images/
+    - assets/icons/
  
 
   # An image asset can refer to one or more resolution-specific "variants", see
@@ -114,3 +114,10 @@ flutter:
   #
   # For details regarding fonts from package dependencies,
   # see https://flutter.dev/custom-fonts/#from-packages
+
+    # flutter pub run flutter_launcher_icons
+flutter_launcher_icons:
+  android: true
+  ios: true
+  image_path_ios: "assets/icons/ios.png"
+  image_path_android: "assets/icons/android.png"
