--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -52,6 +52,7 @@ dependencies:
   fl_chart:
   shared_preferences: ^2.3.2
   flutter_launcher_icons: ^0.13.1
+  cached_network_image: 
 
 
   # The following adds the Cupertino Icons font to your application.
