--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -56,6 +56,7 @@ dependencies:
   flutter_launcher_icons: ^0.13.1
   flutter_libphonenumber: ^2.3.3
   dio: ^5.7.0
+  country_code_picker:
 
 
   # The following adds the Cupertino Icons font to your application.
